--- a/BTVN1508.ipynb
+++ b/BTVN1508.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "baa2b8b5",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['95431', '74310']\n"
+      "Nhập chuỗi số:09543134247431035\n",
+      "Có 2 chuỗi giảm dần dài nhất là: ['95431', '74310']\n"
      ]
     }
    ],
    "source": [
-    "# text = input('Nhập chuỗi số:')\n",
-    "text = '09543134247431035'\n",
+    "text = input('Nhập chuỗi số:')\n",
+    "# text = '09543134247431035'\n",
+    "# text = '0123456789'\n",
     "def tim_so(txt):\n",
     "    '''\n",
     "    Hàm tìm chuỗi số giảm dần dài nhất\n",
     "    Parameter: txt(string)\n",
-    "    Return: result(list)\n",
+    "    Return: result(list) / None\n",
     "    '''\n",
     "    result_string = ''\n",
     "    i = 0\n",
@@ -34,19 +36,23 @@
     "    sorted_result = sorted(all_result, key=len, reverse=True)\n",
     "    result_list = []\n",
     "    max_length = len(sorted_result[0])\n",
-    "    for sorted_item in sorted_result:\n",
-    "        if len(sorted_item) == max_length: \n",
-    "            max_length = len(sorted_item)\n",
-    "            result_list.append(sorted_item)\n",
-    "    return result_list\n",
-    "\n",
-    "print(tim_so(text))"
+    "    if max_length == 1:\n",
+    "        return None\n",
+    "    else:\n",
+    "        for sorted_item in sorted_result:\n",
+    "            if len(sorted_item) == max_length: result_list.append(sorted_item)\n",
+    "        return result_list\n",
+    "ketqua = tim_so(text)\n",
+    "if ketqua == None:\n",
+    "    print('Không tìm thấy chuỗi giảm dần')\n",
+    "else:\n",
+    "    print(f'Có {len(ketqua)} chuỗi giảm dần dài nhất là:', ketqua)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad99b4e",
+   "id": "aa56c0fb",
    "metadata": {},
    "outputs": [],
    "source": []
